# AW-01

./: .gitignore  .gitmodules  Readme.md
.github/workflows/: test_automation.yml
design/: .gitignore  AutoWah.py  EnvelopeFollower.py  Readme.md  WahFilter.py  utils.py
design/audio_files/: Readme.md
installer/: aw-01_installer.iss  readme.md
plugin/: CMakeLists.txt  Readme.md
plugin/Tests/installer/: conftest.py  requirement.txt  test_installer.py
plugin/src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: AutoWah.h  EnvelopeFollower.h  WahFilter.h
plugin/src/gui/: EnvelopeComponent.cpp  EnvelopeComponent.h  FilterComponent.cpp  FilterComponent.h  FilterCurveDisplay.cpp  FilterCurveDisplay.h  FilterTypeSelector.cpp  FilterTypeSelector.h  ScreenComponent.cpp  ScreenComponent.h  colourScheme.h  customLookAndFeel.cpp  customLookAndFeel.h  customRotarySlider.cpp  customRotarySlider.h
plugin/src/tests/: AutoWahTests.h  EnvelopeFollowerTests.h  Readme.md  WahFilterTests.h  catch_main.cpp  kissFFTUtility.cpp  kissFFTUtility.h
plugin/tests/: CMakeLists.txt
plugin/tests/cpp/: CMakeLists.txt  Readme.md
plugin/tests/cpp/dsp/: CMakeLists.txt  EnvelopeFollowerTests.h  catch_main.cpp  kissFFTUtility.cpp
plugin/tests/cpp/juce_plugin/: CMakeLists.txt  KnobSizeTest.h
plugin/tests/dsp/: AutoWahTests.h  CMakeLists.txt  WahFilterTests.h
plugin/tests/juce_plugin/: AudioProcessingTest.h  CMakeLists.txt  KnobSizeTest.h  ParameterStateTests.h  ScreenComponentTests.h  catch_main.cpp
